--- a/test-output/old/Suite1/reporter-output.html
+++ b/test-output/old/Suite1/reporter-output.html
@@ -1,4 +1,10 @@
 <h2>Reporter output</h2><table><tr><td>UserName Entered</td></tr>
 <tr><td>Password Entered</td></tr>
 <tr><td>Login button Clicked</td></tr>
+<tr><td>UserName Entered</td></tr>
+<tr><td>Password Entered</td></tr>
+<tr><td>Login button Clicked</td></tr>
+<tr><td>UserName Entered</td></tr>
+<tr><td>Password Entered</td></tr>
+<tr><td>Login button Clicked</td></tr>
 </table>
