--- a/test-output/old/Suite1/methods-alphabetical.html
+++ b/test-output/old/Suite1/methods-alphabetical.html
@@ -1,30 +1,30 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite1</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="647d63">  <td>26/01/28 00:44:13</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePage_TestingClass.ClosedTheApplication()[pri:0, instance:test_package.HomePage_TestingClass@61d6015a]">&lt;&lt;ClosedTheApplication</td> 
+<tr bgcolor="9f71a9">  <td>26/01/29 23:21:10</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePage_TestingClass.ClosedTheApplication()[pri:0, instance:test_package.HomePage_TestingClass@36fc695d]">&lt;&lt;ClosedTheApplication</td> 
 <td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="647d63">  <td>26/01/28 00:44:13</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePage_TestingClass.ClosedTheApplication()[pri:0, instance:test_package.HomePage_TestingClass@61d6015a]">&lt;&lt;ClosedTheApplication</td> 
+<tr bgcolor="9f71a9">  <td>26/01/29 23:21:10</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePage_TestingClass.ClosedTheApplication()[pri:0, instance:test_package.HomePage_TestingClass@36fc695d]">&lt;&lt;ClosedTheApplication</td> 
 <td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="647d63">  <td>26/01/28 00:44:13</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePage_TestingClass.ClosedTheApplication()[pri:0, instance:test_package.HomePage_TestingClass@61d6015a]">&lt;&lt;ClosedTheApplication</td> 
+<tr bgcolor="9f71a9">  <td>26/01/29 23:21:10</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePage_TestingClass.ClosedTheApplication()[pri:0, instance:test_package.HomePage_TestingClass@36fc695d]">&lt;&lt;ClosedTheApplication</td> 
 <td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="647d63">  <td>26/01/28 00:43:42</td>   <td>-31058</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePage_TestingClass.LoginInToTheApplication()[pri:0, instance:test_package.HomePage_TestingClass@61d6015a]">&gt;&gt;LoginInToTheApplication</td> 
+<tr bgcolor="9f71a9">  <td>26/01/29 23:20:43</td>   <td>-27415</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePage_TestingClass.LoginInToTheApplication()[pri:0, instance:test_package.HomePage_TestingClass@36fc695d]">&gt;&gt;LoginInToTheApplication</td> 
 <td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="647d63">  <td>26/01/28 00:43:42</td>   <td>-31058</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePage_TestingClass.LoginInToTheApplication()[pri:0, instance:test_package.HomePage_TestingClass@61d6015a]">&gt;&gt;LoginInToTheApplication</td> 
+<tr bgcolor="9f71a9">  <td>26/01/29 23:20:43</td>   <td>-27415</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePage_TestingClass.LoginInToTheApplication()[pri:0, instance:test_package.HomePage_TestingClass@36fc695d]">&gt;&gt;LoginInToTheApplication</td> 
 <td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="647d63">  <td>26/01/28 00:43:42</td>   <td>-31058</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePage_TestingClass.LoginInToTheApplication()[pri:0, instance:test_package.HomePage_TestingClass@61d6015a]">&gt;&gt;LoginInToTheApplication</td> 
+<tr bgcolor="9f71a9">  <td>26/01/29 23:20:43</td>   <td>-27415</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePage_TestingClass.LoginInToTheApplication()[pri:0, instance:test_package.HomePage_TestingClass@36fc695d]">&gt;&gt;LoginInToTheApplication</td> 
 <td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="647d63">  <td>26/01/28 00:44:21</td>   <td>8373</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePage_TestingClass.cleanObjects()[pri:0, instance:test_package.HomePage_TestingClass@61d6015a]">&lt;&lt;cleanObjects</td> 
+<tr bgcolor="9f71a9">  <td>26/01/29 23:21:12</td>   <td>1908</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePage_TestingClass.cleanObjects()[pri:0, instance:test_package.HomePage_TestingClass@36fc695d]">&lt;&lt;cleanObjects</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="647d63">  <td>26/01/28 00:41:18</td>   <td>-174940</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePage_TestingClass.launchApplication()[pri:0, instance:test_package.HomePage_TestingClass@61d6015a]">&gt;&gt;launchApplication</td> 
+<tr bgcolor="9f71a9">  <td>26/01/29 23:18:38</td>   <td>-152216</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePage_TestingClass.launchApplication()[pri:0, instance:test_package.HomePage_TestingClass@36fc695d]">&gt;&gt;launchApplication</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="91e38e">  <td>26/01/28 00:41:14</td>   <td>-178878</td> <td title="&gt;&gt;BaseClass.setupSuite()[pri:0, instance:test_package.LoginPage_TestingClass@765d7657]">&gt;&gt;setupSuite</td> 
+<tr bgcolor="e2a7a3">  <td>26/01/29 23:18:36</td>   <td>-154335</td> <td title="&gt;&gt;BaseClass.setupSuite()[pri:0, instance:test_package.LoginPage_TestingClass@618b19ad]">&gt;&gt;setupSuite</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="91e38e">  <td>26/01/28 00:44:22</td>   <td>9806</td> <td title="&lt;&lt;BaseClass.tearDownSuite()[pri:0, instance:test_package.LoginPage_TestingClass@765d7657]">&lt;&lt;tearDownSuite</td> 
+<tr bgcolor="e2a7a3">  <td>26/01/29 23:21:12</td>   <td>2239</td> <td title="&lt;&lt;BaseClass.tearDownSuite()[pri:0, instance:test_package.LoginPage_TestingClass@618b19ad]">&lt;&lt;tearDownSuite</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="647d63">  <td>26/01/28 00:41:48</td>   <td>-145099</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePage_TestingClass.verifyAdminOption()[pri:-1, instance:test_package.HomePage_TestingClass@61d6015a]">verifyAdminOption</td> 
+<tr bgcolor="9f71a9">  <td>26/01/29 23:19:10</td>   <td>-120206</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePage_TestingClass.verifyAdminOption()[pri:-1, instance:test_package.HomePage_TestingClass@36fc695d]">verifyAdminOption</td> 
   <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="647d63">  <td>26/01/28 00:43:54</td>   <td>-18835</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePage_TestingClass.verifyEmployeeTableData()[pri:9, instance:test_package.HomePage_TestingClass@61d6015a]">verifyEmployeeTableData</td> 
+<tr bgcolor="9f71a9">  <td>26/01/29 23:20:55</td>   <td>-15458</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePage_TestingClass.verifyEmployeeTableData()[pri:9, instance:test_package.HomePage_TestingClass@36fc695d]">verifyEmployeeTableData</td> 
   <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="647d63">  <td>26/01/28 00:42:15</td>   <td>-117529</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePage_TestingClass.verifyUserCreationData()[pri:1, instance:test_package.HomePage_TestingClass@61d6015a]">verifyUserCreationData</td> 
+<tr bgcolor="9f71a9">  <td>26/01/29 23:19:43</td>   <td>-86826</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePage_TestingClass.verifyUserCreationData()[pri:1, instance:test_package.HomePage_TestingClass@36fc695d]">verifyUserCreationData</td> 
   <td>main@617901222</td>   <td></td> </tr>
 </table>
